After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650292 - Toolbar unlock button looks out of place
Toolbar unlock button looks out of place
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-16 09:12 UTC by Allan Day
Modified: 2011-07-12 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Mockup of the user accounts panel with the unlock button in the toolbar (31.40 KB, image/png)
2011-05-16 09:12 UTC, Allan Day
  Details
0001-Add-a-cc_panel_get_permission-method.patch (1.45 KB, patch)
2011-05-21 01:35 UTC, Matthias Clasen
committed Details | Review
0002-Add-a-lockbutton-to-the-toolbar.patch (5.87 KB, patch)
2011-05-21 01:36 UTC, Matthias Clasen
committed Details | Review
0003-Printers-Don-t-add-a-lockbutton.patch (3.35 KB, patch)
2011-05-21 01:36 UTC, Matthias Clasen
committed Details | Review
0004-Datetime-Don-t-add-a-lockbutton.patch (3.23 KB, patch)
2011-05-21 01:36 UTC, Matthias Clasen
committed Details | Review
0005-users-don-t-add-a-lockbutton.patch (4.34 KB, patch)
2011-05-21 01:37 UTC, Matthias Clasen
committed Details | Review

Description Allan Day 2011-05-16 09:12:04 UTC
The current design pattern is to put the unlock in the bottom left corner of a panel. This isn't great, since it breaks hierarchy: if something affects something else, it should be on top of it. :)

Moving unlock buttons to the toolbar would solve this problem (mockup attached). It would also save us some vertical screen space.
Comment 1 Allan Day 2011-05-16 09:12:46 UTC
Created attachment 187891 [details]
Mockup of the user accounts panel with the unlock button in the toolbar
Comment 2 Hylke Bons 2011-05-16 10:57:44 UTC
I very much agree. It also makes the button easier to find and saves a lot of vertical space.
Comment 3 Matthias Clasen 2011-05-18 14:35:44 UTC
This will take some re-shuffling, since the lock button is currently part of the pages; to move it out, we'll have to add some api to the modules that lets them provide a permission object to the shell, or something.
Comment 4 Matthias Clasen 2011-05-21 01:35:44 UTC
Created attachment 188264 [details] [review]
0001-Add-a-cc_panel_get_permission-method.patch
Comment 5 Matthias Clasen 2011-05-21 01:36:13 UTC
Created attachment 188265 [details] [review]
0002-Add-a-lockbutton-to-the-toolbar.patch
Comment 6 Matthias Clasen 2011-05-21 01:36:35 UTC
Created attachment 188266 [details] [review]
0003-Printers-Don-t-add-a-lockbutton.patch
Comment 7 Matthias Clasen 2011-05-21 01:36:59 UTC
Created attachment 188267 [details] [review]
0004-Datetime-Don-t-add-a-lockbutton.patch
Comment 8 Matthias Clasen 2011-05-21 01:37:18 UTC
Created attachment 188268 [details] [review]
0005-users-don-t-add-a-lockbutton.patch
Comment 9 Bastien Nocera 2011-05-23 13:23:05 UTC
Doesn't seem to work here. I get warnings:
(gnome-control-center:10633): Gtk-CRITICAL **: gtk_lock_button_set_permission: assertion `G_IS_PERMISSION (permission)' failed

And the button doesn't show up when I go to the date & time. It seems to show up as an icon and a separate label in the toolbar as well (rather than being a single button/toolbar item).
Comment 10 Matthias Clasen 2011-05-23 13:30:31 UTC
(In reply to comment #9)
> Doesn't seem to work here. I get warnings:
> (gnome-control-center:10633): Gtk-CRITICAL **: gtk_lock_button_set_permission:
> assertion `G_IS_PERMISSION (permission)' failed

Yeah, I've only recently allowed this in GTK+. So you need to run against a recent gtk master.

> And the button doesn't show up when I go to the date & time. It seems to show
> up as an icon and a separate label in the toolbar as well (rather than being a
> single button/toolbar item).

This sounds curious. Might be a theme issue, too. Screenshot ?
Comment 11 Bastien Nocera 2011-05-23 13:54:12 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > Doesn't seem to work here. I get warnings:
> > (gnome-control-center:10633): Gtk-CRITICAL **: gtk_lock_button_set_permission:
> > assertion `G_IS_PERMISSION (permission)' failed
> 
> Yeah, I've only recently allowed this in GTK+. So you need to run against a
> recent gtk master.

Need to up the GTK+ dep here then.

> > And the button doesn't show up when I go to the date & time. It seems to show
> > up as an icon and a separate label in the toolbar as well (rather than being a
> > single button/toolbar item).
> 
> This sounds curious. Might be a theme issue, too. Screenshot ?

As discussed on IRC, that's how the GtkLockButton works. We should probably talk to designers to get that handled, but looks good to me, so feel free to commit, and we can handle the look afterwards.
Comment 12 Matthias Clasen 2011-05-23 14:46:17 UTC
> As discussed on IRC, that's how the GtkLockButton works. We should probably
> talk to designers to get that handled, but looks good to me, so feel free to
> commit, and we can handle the look afterwards.

Yes, talking to them now. I'll commit this soon, thanks.
Comment 13 Bastien Nocera 2011-05-23 15:12:25 UTC
Leaving open for the lock button design discussion.
Comment 14 Matthias Clasen 2011-07-12 13:43:55 UTC
The lock button has been redesigned to look like a regular button, so I think this can be closed now.