Add a cc_panel_get_permission method

This is in preparation for moving lock buttons to the toolbar.

https://bugzilla.gnome.org/show_bug.cgi?id=650292